@@ -1,6 +1,6 @@
 package com.baiyi.opscloud.datasource.aws.ec2.helper;
 
-import com.baiyi.opscloud.common.config.CachingConfiguration;
+import com.baiyi.opscloud.common.configuration.CachingConfiguration;
 import com.baiyi.opscloud.common.datasource.AwsConfig;
 import com.baiyi.opscloud.datasource.aws.ec2.feign.AmazonEc2InstanceFeign;
 import com.baiyi.opscloud.datasource.aws.ec2.model.InstanceModel;
@@ -33,14 +33,15 @@ public class AmazonEc2InstanceTypeHelper {
 
     /**
      * 查询EC2实例规格
+     *
      * @param config
      * @return
      * @throws Exception
      */
     @Cacheable(cacheNames = CachingConfiguration.Repositories.CACHE_FOR_1W, key = "'amazon_ec2_instances_details'")
     public Map<String, InstanceModel.EC2InstanceType> getAmazonEc2InstanceTypeMap(AwsConfig.Aws config) throws Exception {
-        URL url = new URL(config.getEc2().getInstances());
-        AmazonEc2InstanceFeign awsEc2API = buildFeign(Joiner.on("://").join(url.getProtocol(),url.getHost()));
+        URL url = config.getEc2().toURL();
+        AmazonEc2InstanceFeign awsEc2API = buildFeign(Joiner.on("://").join(url.getProtocol(), url.getHost()));
         return awsEc2API.getInstances(url.getPath());
     }
 
