@@ -19,7 +19,8 @@
 
 package org.apache.guacamole.protocol;
 
-import java.util.List;
+import lombok.Getter;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.guacamole.GuacamoleConnectionClosedException;
 import org.apache.guacamole.GuacamoleException;
 import org.apache.guacamole.GuacamoleServerException;
@@ -27,8 +28,9 @@ import org.apache.guacamole.io.GuacamoleReader;
 import org.apache.guacamole.io.GuacamoleWriter;
 import org.apache.guacamole.net.DelegatingGuacamoleSocket;
 import org.apache.guacamole.net.GuacamoleSocket;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+
+import java.util.List;
+import java.util.Objects;
 
 /**
  * A GuacamoleSocket which pre-configures the connection based on a given
@@ -40,32 +42,38 @@ import org.slf4j.LoggerFactory;
  * this GuacamoleSocket from manually controlling the initial protocol
  * handshake.
  */
+@Slf4j
 public class ConfiguredGuacamoleSocket extends DelegatingGuacamoleSocket {
-
-    /**
-     * Logger for this class.
-     */
-    private static final Logger logger =
-            LoggerFactory.getLogger(ConfiguredGuacamoleSocket.class);
 
     /**
      * The configuration to use when performing the Guacamole protocol
      * handshake.
      */
-    private GuacamoleConfiguration config;
+    private final GuacamoleConfiguration config;
 
     /**
      * The unique identifier associated with this connection, as determined
      * by the "ready" instruction received from the Guacamole proxy.
      */
-    private String id;
+    private final String id;
     
     /**
      * The protocol version that will be used to communicate with guacd.  The
      * default is 1.0.0, and, if the server does not provide a specific version
      * it will be assumed that it operates at this version and certain features
      * may be unavailable.
+     * -- GETTER --
+     *  Returns the version of the Guacamole protocol associated with the
+     *  Guacamole connection negotiated by this ConfiguredGuacamoleSocket. This
+     *  version is the lowest version common to both ConfiguredGuacamoleSocket
+     *  and the relevant Guacamole proxy instance (guacd).
+     *
+     * @return
+     *     The protocol version that this ConfiguredGuacamoleSocket will use to
+     *     communicate with guacd.
+
      */
+    @Getter
     private GuacamoleProtocolVersion protocolVersion =
             GuacamoleProtocolVersion.VERSION_1_0_0;
 
@@ -94,10 +102,10 @@ public class ConfiguredGuacamoleSocket extends DelegatingGuacamoleSocket {
         // Parse human-readable message from "error" instruction, warning if no
         // message was given
         List<String> args = instruction.getArgs();
-        if (args.size() >= 1)
-            message = args.get(0);
+        if (!args.isEmpty())
+            message = args.getFirst();
         else
-            logger.debug("Received \"error\" instruction with no corresponding message.");
+            log.debug("Received \"error\" instruction with no corresponding message.");
 
         // Parse the status code from the received error instruction, warning
         // if the status code is missing or invalid
@@ -110,15 +118,15 @@ public class ConfiguredGuacamoleSocket extends DelegatingGuacamoleSocket {
                 if (parsedStatus != null)
                     status = parsedStatus;
                 else
-                    logger.debug("Received \"error\" instruction with unknown/invalid status code: {}", statusCode);
+                    log.debug("Received \"error\" instruction with unknown/invalid status code: {}", statusCode);
 
             }
             catch (NumberFormatException e) {
-                logger.debug("Received \"error\" instruction with non-numeric status code.", e);
+                log.debug("Received \"error\" instruction with non-numeric status code.", e);
             }
         }
         else
-            logger.debug("Received \"error\" instruction without status code.");
+            log.debug("Received \"error\" instruction without status code.");
 
         // Convert parsed status code and message to a GuacamoleException
         throw status.toException(message);
@@ -251,10 +259,8 @@ public class ConfiguredGuacamoleSocket extends DelegatingGuacamoleSocket {
             String value = config.getParameter(arg_name);
 
             // If value defined, set that value
-            if (value != null) arg_values[i] = value;
-
             // Otherwise, leave value blank
-            else arg_values[i] = "";
+            arg_values[i] = Objects.requireNonNullElse(value, "");
 
         }
 
@@ -313,7 +319,7 @@ public class ConfiguredGuacamoleSocket extends DelegatingGuacamoleSocket {
         if (ready_args.isEmpty())
             throw new GuacamoleServerException("No connection ID received");
 
-        id = ready.getArgs().get(0);
+        id = ready.getArgs().getFirst();
 
     }
 
@@ -337,20 +343,6 @@ public class ConfiguredGuacamoleSocket extends DelegatingGuacamoleSocket {
      */
     public String getConnectionID() {
         return id;
-    }
-
-    /**
-     * Returns the version of the Guacamole protocol associated with the
-     * Guacamole connection negotiated by this ConfiguredGuacamoleSocket. This
-     * version is the lowest version common to both ConfiguredGuacamoleSocket
-     * and the relevant Guacamole proxy instance (guacd).
-     *
-     * @return
-     *     The protocol version that this ConfiguredGuacamoleSocket will use to
-     *     communicate with guacd.
-     */
-    public GuacamoleProtocolVersion getProtocolVersion() {
-        return protocolVersion;
     }
 
     @Override
