@@ -19,19 +19,15 @@
 
 package org.apache.guacamole.protocol;
 
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Queue;
-import org.apache.guacamole.GuacamoleException;
-import org.apache.guacamole.GuacamoleUpstreamException;
-import org.apache.guacamole.GuacamoleUpstreamNotFoundException;
-import org.apache.guacamole.GuacamoleUpstreamTimeoutException;
-import org.apache.guacamole.GuacamoleUpstreamUnavailableException;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.guacamole.*;
 import org.apache.guacamole.io.GuacamoleReader;
 import org.apache.guacamole.net.DelegatingGuacamoleSocket;
 import org.apache.guacamole.net.GuacamoleSocket;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Queue;
 
 /**
  * GuacamoleSocket which intercepts errors received early in the Guacamole
@@ -40,13 +36,8 @@ import org.slf4j.LoggerFactory;
  * constructor, allowing a different socket to be substituted prior to
  * fulfilling the connection.
  */
+@Slf4j
 public class FailoverGuacamoleSocket extends DelegatingGuacamoleSocket {
-
-    /**
-     * Logger for this class.
-     */
-    private static final Logger logger =
-            LoggerFactory.getLogger(FailoverGuacamoleSocket.class);
 
     /**
      * The default maximum number of characters of Guacamole instruction data
@@ -78,7 +69,7 @@ public class FailoverGuacamoleSocket extends DelegatingGuacamoleSocket {
         // Ignore error instructions which are missing the status code
         List<String> args = instruction.getArgs();
         if (args.size() < 2) {
-            logger.debug("Received \"error\" instruction without status code.");
+            log.debug("Received \"error\" instruction without status code.");
             return;
         }
 
@@ -88,14 +79,14 @@ public class FailoverGuacamoleSocket extends DelegatingGuacamoleSocket {
             statusCode = Integer.parseInt(args.get(1));
         }
         catch (NumberFormatException e) {
-            logger.debug("Received \"error\" instruction with non-numeric status code.", e);
+            log.debug("Received \"error\" instruction with non-numeric status code.", e);
             return;
         }
 
         // Translate numeric status code into a GuacamoleStatus
         GuacamoleStatus status = GuacamoleStatus.fromGuacamoleStatusCode(statusCode);
         if (status == null) {
-            logger.debug("Received \"error\" instruction with unknown/invalid status code: {}", statusCode);
+            log.debug("Received \"error\" instruction with unknown/invalid status code: {}", statusCode);
             return;
         }
 
@@ -104,19 +95,19 @@ public class FailoverGuacamoleSocket extends DelegatingGuacamoleSocket {
 
             // Generic upstream error
             case UPSTREAM_ERROR:
-                throw new GuacamoleUpstreamException(args.get(0));
+                throw new GuacamoleUpstreamException(args.getFirst());
 
             // Upstream is unreachable
             case UPSTREAM_NOT_FOUND:
-                throw new GuacamoleUpstreamNotFoundException(args.get(0));
+                throw new GuacamoleUpstreamNotFoundException(args.getFirst());
 
             // Upstream did not respond
             case UPSTREAM_TIMEOUT:
-                throw new GuacamoleUpstreamTimeoutException(args.get(0));
+                throw new GuacamoleUpstreamTimeoutException(args.getFirst());
 
             // Upstream is refusing the connection
             case UPSTREAM_UNAVAILABLE:
-                throw new GuacamoleUpstreamUnavailableException(args.get(0));
+                throw new GuacamoleUpstreamUnavailableException(args.getFirst());
 
         }
 
