@@ -5,6 +5,7 @@ import com.baiyi.opscloud.common.util.NewTimeUtil;
 import org.junit.jupiter.api.Test;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Date;
 
@@ -18,18 +19,17 @@ public class URLTest extends BaseUnit {
     // https://static-legacy.dingtalk.com/media/lQDPDhvVtvtbMfPNA8LNA8CwHt7eHxEhYoQDLtLPsEC3AA_960_962.jpg
 
     @Test
-    void paseURL() {
+    void parseURL() {
         try {
-            URL url = new URL("https://static-legacy.dingtalk.com/media/lQDPDhvVtvtbMfPNA8LNA8CwHt7eHxEhYoQDLtLPsEC3AA_960_962.jpg");
+            URL url = URI.create("https://static-legacy.dingtalk.com/media/lQDPDhvVtvtbMfPNA8LNA8CwHt7eHxEhYoQDLtLPsEC3AA_960_962.jpg").toURL();
             print("host=" + url.getHost());
             print("path=" + url.getPath());
             print("query=" + url.getQuery());
             print("file=" + url.getFile());
-            print("protocol=" +url.getProtocol());
+            print("protocol=" + url.getProtocol());
             print(url);
         } catch (MalformedURLException e) {
             print(e.getMessage());
-
         }
     }
 
@@ -38,9 +38,9 @@ public class URLTest extends BaseUnit {
         Date doomsday = NewTimeUtil.parse("2023-02-20 22:22:22");
         print(doomsday.after(new Date()));
         print(doomsday.before(new Date()));
-        /**
-         * true
-         * false
+        /*
+          true
+          false
          */
     }
 
